...
        android:text="Hello"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="User"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/hello_txt"
        app:layout_constraintTop_toTopOf="@+id/hello_txt"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/current_goal"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:text="5000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintLeft_toLeftOf="@+id/goal_txt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hello_txt"
        app:layout_constraintVertical_bias="0.183" />

    <EditText
        android:id="@+id/goal_edit"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="5000"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintLeft_toLeftOf="@+id/goal_txt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hello_txt"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/edit_goal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_txt"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/current_ft"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_txt"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/current_in"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
...
